* (bug 19004) Added support for tags
* (bug 21083) list=allusers no longer returns current timestamp for users
  without registration date
* (bug 20967) action=edit allows creation of invalid titles
* (bug 19523) Add inprop=watched to prop=info
* (bug 21589) API: Separate summary and initial page text for uploads
* (bug 21817) list=usercontribs returns empty result for empty ucuser

=== Languages updated in 1.16 ===

MediaWiki supports over 300 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of MediaZilla reports.

* North Frisian (frr) (new)
* Kirmanjki (kiu) (new)
* Karachay-Balkar (krc) (new)
* Hill Mari (mrj) (new)
* Prussian (prg) (new)
* Romagnol (rgn) (new)
* Lower Silesian (sli) (new)
* Picard (pcd) (new)
* Uyghur (Arabic script) (ug-arab) (new)
* Votic (vot) (new)
* Eastern Yiddish (ydd) (removed)
* Iriga Bicolano (bto) (removed)
* Ladin (lld) (removed)
* Laz (lzz) (removed)
* Palembang (plm) (removed)
* Megleno-Romanian (Greek script) (ruq-grek) (removed)
* Tamazight (tzm) (removed)

* (bug 18474) Sorani (ckb - Central Kurdish) (renamed from ku-arab)
* Add PLURAL function for Scots Gaelic (gd)
* Add Estonian letters äöõšüž to linktrail (et)
* (bug 18776) Native name of Burmese language (my)
* (bug 18806) Use correct unicode characters in spelling of native Chuvash
  (Чӑвашла)
* (bug 18864) Updated autonym for Zhuang language
* (bug 18308) Updated date formatting in Occitan (oc)
* (bug 19080) Added ăâîşţșțĂÂÎŞŢȘȚ to Romanion (ro) linktrail
* (bug 19286) Correct commafying function in Polish (pl)
* (bug 19441) Updated date formatting for Lithuanian
* (bug 19630) Added ÄäÇçĞğŇňÖöŞşÜüÝýŽž to Turkmen (tk) linktrail
* (bug 19949) New linktrail for Greek (el)
* (bug 19809) Korean (North Korea) (ko-kp) (new)
* (bug 19968) Fixed "Project talk" namespace name for Maltese (mt)
* (bug 21168) Added áâãàéêçíóôõúü to Portuguese (pt) linktrail