@@ -88,7 +88,7 @@ class ApiQueryUserInfo extends ApiQueryBase {
 			$result->setIndexedTagName($vals['changeablegroups']['remove-self'], 'g');
 		}
 		if (isset($this->prop['options'])) {
-			$vals['options'] = (is_null($wgUser->mOptions) ? User::getDefaultOptions() : $wgUser->mOptions);
+			$vals['options'] = $wgUser->getOptions();
 		}
 		if (isset($this->prop['preferencestoken']) && is_null($this->getMain()->getRequest()->getVal('callback'))) {
 			$vals['preferencestoken'] = $wgUser->editToken();
