@@ -747,6 +747,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 19523) Add inprop=watched to prop=info
 * (bug 21589) API: Separate summary and initial page text for uploads
 * (bug 21817) list=usercontribs returns empty result for empty ucuser
+* (bug 21441) meta=userinfo&uiprop=options no longer returns default options
+  for logged-in users under certain circumstances
 
 === Languages updated in 1.16 ===
 
